syntax = "proto3";
package info;

option go_package = "github.com/trippsoft/forge/pkg/discover";

message DiscoverInfoRequest {}

message OSInfoResponse {
  string kernel = 1;
  string id = 2;
  string friendly_name = 3;
  string release = 4;
  string release_id = 5;
  string major_version = 6;
  string version = 7;
  string edition = 8;
  string edition_id = 9;
  string arch = 10;
  repeated string families = 11;
}

message FIPSInfoResponse {
  bool known = 1;
  bool enabled = 2;
}

message AppArmorInfoResponse {
  bool supported = 1;
  bool enabled = 2;
}

message SELinuxInfoResponse {
  bool supported = 1;
  bool installed = 2;
  string status = 3;
  string type = 4;
}

message PackageManagerInfoResponse {
  string name = 1;
  string path = 2;
}

message ServiceManagerInfoResponse {
  string name = 1;
}

message DiscoverInfoResponse {
  OSInfoResponse os = 1;
  FIPSInfoResponse fips = 2;
  AppArmorInfoResponse app_armor = 3;
  SELinuxInfoResponse selinux = 4;
  PackageManagerInfoResponse package_manager = 5;
  ServiceManagerInfoResponse service_manager = 6;
}

service DiscoveryPlugin {
  rpc DiscoverInfo(DiscoverInfoRequest) returns (DiscoverInfoResponse);
  rpc Shutdown(ShutdownRequest) returns (ShutdownResponse);
}

message ShutdownRequest {}
message ShutdownResponse {}
